[gd_scene load_steps=4 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Square.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.33333, 7.33333 )

[node name="Player" type="Sprite"]
modulate = Color( 0, 0.294118, 0.784314, 1 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Reload_speed" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Power_up_cooldown" type="Timer" parent="."]
one_shot = true

[node name="Hitbox" type="Area2D" parent="." groups=["Player"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
visible = false
position = Vector2( 2.38419e-07, -2.38419e-07 )
shape = SubResource( 1 )

[connection signal="timeout" from="Reload_speed" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Power_up_cooldown" to="." method="_on_Power_up_cooldown_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
